--- a/backend/Chrome Extension/extension_menu/popup.html
+++ b/backend/Chrome Extension/extension_menu/popup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="US">
 <head>
   <title>Trustify</title>
   <link rel="stylesheet" href="style.css">
@@ -61,14 +61,16 @@
 
     <!-- Footer -->
     <div class="footer-container">
-      <div class="footer-left">
-        <a href="http://localhost:5173/" target="_blank">
-          <img src="icons/trustify.svg" class="footer-logo" alt="Trustify Logo" />
-        </a>
-      </div>
-      <span class="footer-text">Trustify</span>
-      <img src="icons/settings.svg" class="footer-icon" alt="Settings" />
-    </div>
+  <div class="footer-left">
+    <a href="http://localhost:5173/" target="_blank">
+      <img src="icons/trustify.svg" class="footer-logo" alt="Trustify Logo" />
+    </a>
+  </div>
+  <span class="footer-text">Trustify</span>
+  <svg class="footer-icon refresh-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+    <path d="M21 12c0 4.97-4.03 9-9 9s-9-4.03-9-9 4.03-9 9-9c2.39 0 4.68.94 6.36 2.63L12 12"></path>
+  </svg>
+</div>
   </div>
   <script src="popup.js"></script>
 </body>
